update dockerfile and similar smart contract case
